{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "78e61e13-76ec-4dcf-a424-9b6b6b5feaa8",
            "actions": [
                {
                    "name": "PunchHead",
                    "type": "Button",
                    "id": "52a8ce91-639a-495e-b9a1-b26cc64037cd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PunchKidney",
                    "type": "Button",
                    "id": "1f0f1584-7c39-48b4-a655-a6e2625d23a7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PunchStomach",
                    "type": "Button",
                    "id": "55260df1-33d0-4f5c-9d8f-289b4b7a350b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "1640cf21-69f4-47ce-800e-73612e72891c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "565c6e69-e750-4028-b042-9dc648f67557",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchHead",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "babaab50-0089-448c-97cb-852f72da183a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchKidney",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4456f213-d4a6-419f-994b-cba99b66f594",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchStomach",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "904a476b-38a7-4e27-9cb6-8b2c54959fec",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}